# rs-template

./: .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  flake.nix  renovate.json
.cargo/: clippy.toml  config.toml
.claude/: settings.local.json
src/: lib.rs  main.rs  verified.rs
xtask/: Cargo.toml
xtask/src/: main.rs  relationships.rs
