[workspace]
members = [".", "xtask"]

[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "A minimal Rust project template"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-template"
keywords = ["template", "example"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

[lib]
name = "rust_template"
path = "src/lib.rs"

[[bin]]
name = "rust-template"
path = "src/main.rs"
